chore: Follow the new logging guidelines in the AgetnFS daemon

--- a/specs/Public/R4.status.md
+++ b/specs/Public/R4.status.md
@@ -30,6 +30,7 @@ This status plan decomposes First Release task **R4** into milestones that make 
   - Implemented lower-filesystem aware snapshot exports in `agentfs-core` so read-only mounts merge upper layer changes with the lower repository instead of copying the entire tree. (`crates/agentfs-core/src/vfs.rs`)
   - Added the `provider_core_behavior_agentfs` integration test that shells out to the harness driver, validates cleanup token idempotency (including readonly export release), and keeps per-run logs under `target/tests`. (`crates/ah-fs-snapshots/tests/provider_core_behavior_agentfs.rs`)
   - Authored the `handshake_smoke` daemon test to launch the production binary, enforce handshake timeouts, drive control-plane requests via `agentfs-client`, and capture the daemon log transcript on failure. (`crates/agentfs-daemon/tests/handshake_smoke.rs`)
+  - Created the `docs/AgentFS-Harness-run-book.md` playbook describing build commands, environment variables, and troubleshooting steps for the harness driver and provider matrix.
 - **Key Source Files**
   - `crates/ah-fs-snapshots/src/agentfs.rs`
   - `crates/agentfs-client/src/lib.rs`
@@ -37,7 +38,7 @@ This status plan decomposes First Release task **R4** into milestones that make 
   - `tests/fs-snapshots-test-harness/src/{lib.rs,scenarios.rs,bin/driver.rs}`
   - `crates/ah-cli/src/agent/fs.rs` and `crates/ah-cli/tests/agentfs_status_command.rs`
 - **Outstanding Tasks**
-  - Document run-book steps for the new harness targets in `docs/` and ensure cross-platform detection covers Windows parity (tracked for later milestones).
+  - Ensure cross-platform detection covers Windows parity (tracked for later milestones).
 
 ### M2. Workspace preparation in CLI & sandbox tooling (1 week)
 
