feat(tui): Foundations for implementing the ghost text autocompletion

--- a/specs/Public/R3.status.md
+++ b/specs/Public/R3.status.md
@@ -31,11 +31,13 @@ review_status: Draft
 - Expand `InlineAutocomplete` to cache results, display ghost text for the active suggestion, and merge async refreshes without flicker.
 - Trigger menus immediately on `/` and `@`, carrying over the selected item when refreshed.
 - Support Right Arrow quick-pick, Tab/Enter acceptance, Esc dismissal, and mouse wheel/click selection parity.
+- Introduce an `Autocomplete Active` minor mode that surfaces a dedicated `Accept Autocomplete` operation (Tab by default) so inline completions take precedence over form navigation whenever a suggestion is present.
 
 **Verification**
 
 - Add unit tests for `InlineAutocomplete` covering caching, refresh churn, ghost text rendering, and new key bindings.
 - Extend PRD-focused tests to drive the autocomplete through slash/at triggers, async refresh, mouse selection, and ghost overlay usage, asserting against the resulting view model state instead of snapshot diffs.
+- Ensure the PRD input suite covers both acceptance paths (Tab-driven shared extension vs. full completion) and asserts that Tab falls back to next-field navigation as soon as no suggestion is available.
 
 ### M3. Draft Auto-Save State Machine
 
@@ -57,7 +59,7 @@ review_status: Draft
 
 - Centralize footer shortcut computation so pluralization (“Agent(s)”) and modal state changes update instantly.
 - Add mouse hint segments when pointer activity is detected (scroll/click guidance).
-- Ensure draft textarea focus shows `Enter Launch Agent(s) • Shift+Enter New Line • Tab Next Field`, and other states follow the PRD matrix.
+- Ensure draft textarea focus shows `Enter Launch Agent(s) • Shift+Enter New Line • Tab Complete/Next Field`, and other states follow the PRD matrix.
 
 **Verification**
 
