feat(sandbox): Allow specifying existing AgentFS socket when launching the sandbox

--- a/specs/Public/R4.status.md
+++ b/specs/Public/R4.status.md
@@ -6,7 +6,7 @@ This status plan decomposes First Release task **R4** into milestones that make 
 
 ## Milestones
 
-### M1. Control-plane foundations (1–2 weeks)
+### M1. Control-plane foundations (1–2 weeks) - COMPLETED
 
 - **Deliverables**
   - Implement an `AgentFsProvider` in `ah-fs-snapshots` that wraps daemon lifecycle management (spawn, handshake, shutdown) and exposes `prepare_writable_workspace`, `snapshot_now`, and `branch_from_snapshot`.
@@ -44,12 +44,29 @@ This status plan decomposes First Release task **R4** into milestones that make 
 
 - **Deliverables**
   - Update `prepare_workspace_with_fallback` to call the AgentFS provider first (respecting CLI overrides and working-copy mode) and to reuse or spawn the daemon as needed.
-  - Extend `ah agent sandbox` with `--fs-provider` (`auto|agentfs|git|zfs|btrfs`) and `--agentfs-socket` flags that reuse existing daemons when provided.
+  - Extend `ah agent sandbox` with `--fs-snapshots` (`auto|agentfs|git|zfs|btrfs|disable`) and `--agentfs-socket` flags that reuse existing daemons when provided.
   - Add telemetry and debug logging (via `ah-logging`) that records provider choice, daemon PID, and mount paths.
 - **Verification**
-  - [ ] `cargo test -p ah-cli --test sandbox_workspace_agentfs` exercises `ah agent sandbox --fs-provider agentfs` end-to-end, asserting the command exits cleanly, the workspace is isolated, and the daemon is reused when `--agentfs-socket` is provided.
-  - [ ] `just lint-rust` remains clean after the logging hooks are added (CI gate).
+  - [x] `cargo test -p ah-cli --test sandbox_workspace_agentfs` exercises `ah agent sandbox --fs-snapshots agentfs` end-to-end, asserting the command exits cleanly, the workspace is isolated, and the daemon is reused when `--agentfs-socket` is provided.
+  - [x] `just lint-rust` remains clean after the logging hooks are added (CI gate).
   - [ ] New snapshot of CLI help (`cargo test -p ah-cli --test cli_help_snapshots`) verifies the documented flags include AgentFS options.
+
+#### Implementation Status
+
+- **Implementation Details**
+  - Updated `prepare_workspace_with_fallback` in `crates/ah-cli/src/sandbox.rs` to prioritize AgentFS provider when available, with support for daemon reuse via `--agentfs-socket` flag. (`crates/ah-cli/src/sandbox.rs`)
+  - Added CLI flags `--fs-snapshots` and `--agentfs-socket` to `ah agent sandbox` command with comprehensive argument parsing and validation. (`crates/ah-cli/src/sandbox.rs`)
+  - Implemented extensive telemetry and debug logging throughout the workspace preparation flow, recording provider selection, daemon status, and filesystem operations. (`crates/ah-cli/src/sandbox.rs`, `crates/ah-fs-snapshots/src/agentfs.rs`)
+  - Created comprehensive integration test `test_sandbox_agentfs_daemon_reuse` that validates end-to-end AgentFS functionality including daemon spawning, socket reuse, filesystem isolation, and overlay persistence. (`crates/ah-cli/tests/sandbox_workspace_agentfs.rs`)
+  - Extracted test scripts to separate files for better maintainability: `create-test-files.sh` for generating test filesystem content and `verify-test-files.sh` for validating overlay persistence. (`crates/ah-cli/tests/`)
+- **Key Source Files**
+  - `crates/ah-cli/src/sandbox.rs` - Workspace preparation logic and CLI argument handling
+  - `crates/ah-fs-snapshots/src/agentfs.rs` - AgentFS provider implementation with socket reuse
+  - `crates/ah-cli/tests/sandbox_workspace_agentfs.rs` - Integration tests
+  - `crates/ah-cli/tests/create-test-files.sh` - Test file creation script
+  - `crates/ah-cli/tests/verify-test-files.sh` - Test file verification script
+- **Outstanding Tasks**
+  - Create CLI help snapshot test to ensure AgentFS options are properly documented in help output.
 
 ### M3. Local task manager integration (2 weeks, platform-parallel)
 
