feat(command-tracing): Foundations of the command-tracing functionality

--- a/specs/Public/R9.status.md
+++ b/specs/Public/R9.status.md
@@ -38,21 +38,42 @@ Core unit tests (`cargo test -p ah-command-trace-shim`) stay pure Rust without L
 
 **Deliverables**
 
-- [ ] Scaffold `crates/ah-command-trace-shim` with shared core + platform modules (macOS `.dylib`, Linux `.so`) and build-time gating (`cargo cfg` ensures no-std symbols are resolved before tests run).
-- [ ] Provide ergonomic loaders for tests:
-  - macOS: wrapper around `/usr/bin/env DYLD_INSERT_LIBRARIES=…` that spawns arbitrary binaries while guaranteeing SIP-safe environment variables.
+- [x] Scaffold `crates/ah-command-trace-shim` with shared core + platform modules (macOS `.dylib`, Linux `.so`) and build-time gating (`cargo cfg` ensures no-std symbols are resolved before tests run).
+- [x] Provide ergonomic loaders for tests:
+  - macOS: wrapper around `DYLD_INSERT_LIBRARIES` that spawns arbitrary binaries while guaranteeing SIP-safe environment variables.
   - Linux: helper that wraps commands with `LD_PRELOAD`, handles musl/glibc differences, and skips static binaries gracefully.
-- [ ] Add `tests/shim_injection_smoke.rs` integration suite:
-  - Launches a trivial helper binary (`tests/helpers/print_pid.rs`) via both loaders.
+- [x] Add `tests/shim_injection_smoke.rs` integration suite:
+  - Launches a trivial helper binary (`src/bin/test_helper.rs`) via both loaders.
   - Asserts the shim announces itself over a loopback Unix socket (handshake + keepalive) before the helper writes a single byte.
   - Verifies the shim tears down cleanly even when the target immediately exits or calls `_exit`.
-- [ ] Document loader environment variables (`AH_CMDTRACE_ENABLED`, `AH_CMDTRACE_SOCKET`, `AH_CMDTRACE_LOG`) and safe defaults (disabled when socket unset).
+- [x] Document loader environment variables (`AH_CMDTRACE_ENABLED`, `AH_CMDTRACE_SOCKET`, `AH_CMDTRACE_LOG`) and safe defaults (disabled when socket unset).
 
 **Verification**
 
-- [ ] `cargo test -p ah-command-trace-shim shim_injection_smoke` runs on macOS + Linux CI lanes.
-- [ ] Negative test ensures shim stays dormant when `AH_CMDTRACE_ENABLED=0`.
-- [ ] Sanitizer builds (ASAN/TSAN) run weekly to catch unsafe init ordering issues (esp. before `main()`).
+- [x] `cargo test -p ah-command-trace-e2e-tests shim_injection_smoke` runs on macOS + Linux CI lanes.
+- [x] Negative test ensures shim stays dormant when `AH_CMDTRACE_ENABLED=0`.
+- [x] Sanitizer builds (ASAN/TSAN) run weekly to catch unsafe init ordering issues (esp. before `main()`).
+
+**Implementation Details**
+
+The M0 implementation follows a layered architecture with platform-agnostic core logic and platform-specific adapters:
+
+- **Core Layer** (`crates/ah-command-trace-shim/src/lib.rs`): Contains initialization state management, environment variable parsing, and shared types. Uses `OnceCell` for global state and provides conditional logging based on `AH_CMDTRACE_LOG`.
+- **Platform Adapters**:
+  - macOS (`src/platform/macos.rs`): Uses `DYLD_INSERT_LIBRARIES` for library interposition and performs synchronous handshake during initialization to avoid process blocking.
+  - Linux (`src/platform/linux.rs`): Uses `LD_PRELOAD` for library preloading with similar synchronous handshake approach.
+- **Communication Protocol**: Uses genuine SSZ (Simple Serialize) binary protocol over Unix domain sockets, with length-prefixed messaging for reliable framing.
+- **Test Infrastructure**: Separate `crates/ah-command-trace-e2e-tests` crate prevents shim injection into `cargo test` runner, using synchronous socket servers for reliable testing.
+
+**Key Source Files**
+
+- `crates/ah-command-trace-shim/src/lib.rs` - Core initialization and state management
+- `crates/ah-command-trace-shim/src/platform/macos.rs` - macOS DYLD interposition implementation
+- `crates/ah-command-trace-shim/src/platform/linux.rs` - Linux LD_PRELOAD implementation
+- `crates/ah-command-trace-proto/src/lib.rs` - SSZ protocol definitions and encoding/decoding
+- `crates/ah-command-trace-proto/src/messages.rs` - Request/Response message types
+- `crates/ah-command-trace-e2e-tests/src/lib.rs` - Test utilities and platform-specific loaders
+- `crates/ah-command-trace-e2e-tests/tests/shim_injection_smoke.rs` - Integration test suite
 
 ### M1. Sub-Process Detection Harness
 
