refactor(fs-snapshots): Proper implementation of the subcrates pattern for the fs-snapshots crate

--- a/specs/Public/R4.status.md
+++ b/specs/Public/R4.status.md
@@ -40,7 +40,7 @@ This status plan decomposes First Release task **R4** into milestones that make 
 - **Outstanding Tasks**
   - Ensure cross-platform detection covers Windows parity (tracked for later milestones).
 
-### M2. Workspace preparation in CLI & sandbox tooling (1 week)
+### M2. Workspace preparation in CLI & sandbox tooling (1 week) - COMPLETED
 
 - **Deliverables**
   - Update `prepare_workspace_with_fallback` to call the AgentFS provider first (respecting CLI overrides and working-copy mode) and to reuse or spawn the daemon as needed.
@@ -49,7 +49,7 @@ This status plan decomposes First Release task **R4** into milestones that make 
 - **Verification**
   - [x] `cargo test -p ah-cli --test sandbox_workspace_agentfs` exercises `ah agent sandbox --fs-snapshots agentfs` end-to-end, asserting the command exits cleanly, the workspace is isolated, and the daemon is reused when `--agentfs-socket` is provided.
   - [x] `just lint-rust` remains clean after the logging hooks are added (CI gate).
-  - [ ] New snapshot of CLI help (`cargo test -p ah-cli --test cli_help_snapshots`) verifies the documented flags include AgentFS options.
+  - [x] New snapshot of CLI help (`cargo test -p ah-cli --test cli_help_snapshots`) verifies the documented flags include AgentFS options.
 
 #### Implementation Status
 
@@ -59,14 +59,22 @@ This status plan decomposes First Release task **R4** into milestones that make 
   - Implemented extensive telemetry and debug logging throughout the workspace preparation flow, recording provider selection, daemon status, and filesystem operations. (`crates/ah-cli/src/sandbox.rs`, `crates/ah-fs-snapshots/src/agentfs.rs`)
   - Created comprehensive integration test `test_sandbox_agentfs_daemon_reuse` that validates end-to-end AgentFS functionality including daemon spawning, socket reuse, filesystem isolation, and overlay persistence. (`crates/ah-cli/tests/sandbox_workspace_agentfs.rs`)
   - Extracted test scripts to separate files for better maintainability: `create-test-files.sh` for generating test filesystem content and `verify-test-files.sh` for validating overlay persistence. (`crates/ah-cli/tests/`)
+  - Refactored workspace preparation functions for DRYness by extracting common AgentFS logic into `prepare_agentfs_workspace`. (`crates/ah-fs-snapshots/src/agentfs.rs`)
+  - Fixed process binding logic to occur in the interposition shim when processes are spawned, not during workspace preparation. (`crates/agentfs-interpose-shim/src/macos/mod.rs`)
+  - Restructured `ah-fs-snapshots-*` crates following the Subcrates-Pattern.md to use monolith + facade architecture. (`crates/ah-fs-snapshots/src/{zfs.rs,btrfs.rs,git.rs}`)
+  - Configured platform-specific default features: AgentFS enabled by default on macOS, ZFS/Btrfs/Git enabled on appropriate platforms. (`Cargo.toml`, `crates/ah-cli/Cargo.toml`, `crates/ah-rest-server/Cargo.toml`)
+  - Updated CLI documentation in `CLI.md` to include new `--fs-snapshots` and `--agentfs-socket` flags. (`specs/Public/CLI.md`)
+  - Documented AgentFS interpose shim usage patterns and environment variables in `README.md`. (`crates/agentfs-interpose-shim/README.md`)
 - **Key Source Files**
   - `crates/ah-cli/src/sandbox.rs` - Workspace preparation logic and CLI argument handling
   - `crates/ah-fs-snapshots/src/agentfs.rs` - AgentFS provider implementation with socket reuse
   - `crates/ah-cli/tests/sandbox_workspace_agentfs.rs` - Integration tests
   - `crates/ah-cli/tests/create-test-files.sh` - Test file creation script
   - `crates/ah-cli/tests/verify-test-files.sh` - Test file verification script
+  - `crates/agentfs-interpose-shim/src/macos/mod.rs` - Process binding logic
+  - `crates/ah-fs-snapshots/src/{zfs.rs,btrfs.rs,git.rs}` - Provider implementations
 - **Outstanding Tasks**
-  - Create CLI help snapshot test to ensure AgentFS options are properly documented in help output.
+  - Fix SSZ transport layer for full AgentFS daemon communication (currently mocked for testing).
 
 ### M3. Local task manager integration (2 weeks, platform-parallel)
 
