feat(command-tracing): Tests for indirect child processes and stress tests

--- a/specs/Public/R9.status.md
+++ b/specs/Public/R9.status.md
@@ -106,8 +106,24 @@ The M0-M1 implementation follows a layered architecture with platform-agnostic c
 - [x] `shim_teardown_clean_exit`: Tests clean shutdown on process exit
 - [x] `shim_teardown_underscore_exit`: Tests teardown on abnormal exit
 - [x] `shim_records_spawn_tree`: Tests subprocess detection and CommandStart IPC
-- [ ] Stress test: helper loops 200 times creating burst of sub-processes; shim must report all without socket backpressure errors.
-- [ ] Coverage for both dynamic shells (`/bin/sh`) and direct exec of binaries with custom interpreters (`/usr/bin/env python`).
+- [x] Stress test: helper loops 200 times creating burst of sub-processes; shim must report all without socket backpressure errors.
+- [x] Coverage for both dynamic shells (`/bin/sh`) and direct exec of binaries with custom interpreters (`/usr/bin/env python`).
+  - ✅ **Successfully implemented and verified Python subprocess capture**:
+    - Fixed `clone()` hook to treat `CLONE_VFORK` as process creation (captures posix_spawn-based subprocesses)
+    - Refactored `vfork()` hook to be parent-driven (safer, avoids UB in child)
+    - Added comprehensive exec hooks: `execv`, `execveat`, `execvpe` for additional coverage
+    - Implemented lazy client connection with retry logic for robust communication
+    - Fixed crate configuration: `cdylib` instead of `dylib` for proper shared library generation
+    - **Integration tests confirm**: Python interpreter processes AND their subprocesses are captured
+    - **Test results**: Both `shim_shell_and_interpreter_coverage` and `shim_stress_test_burst_subprocesses` pass ✅
+  - ✅ **Indirect child process interception working**: The tests verify that processes launched by bash and python (indirect children) are properly intercepted
+    - Python `subprocess.run()` calls trigger posix_spawn hooks and are captured
+    - Shell script subprocesses are tracked through the command execution pipeline
+    - Lazy connection establishment ensures reliable communication between shim and server
+  - ✅ **Test infrastructure fully restored and functional**:
+    - `test_helper shell_and_interpreter` command restored and working
+    - `spawn_tree stress_test` command restored and working
+    - All test binaries compile and execute correctly in Nix environment
 
 ### M2. Stdout/Stderr Chunk Capture
 
