refactor: Renames that align better with the new agents/models terminology

--- a/specs/Public/R9.status.md
+++ b/specs/Public/R9.status.md
@@ -157,7 +157,7 @@ The M0-M1 implementation follows a layered architecture with platform-agnostic c
 - [ ] Golden fixtures of parsed `.ahr` metadata (JSON) stored under `tests/golden/command_trace/`.
 - [ ] Replay smoke test ensures toggling `--command-trace=off` yields legacy `.ahr` (no new records) and passes back-compat.
 - [ ] Scenario variant where the mock agent purposely kills a command mid-output; shim/recorder must emit `CommandEnd` with `exit_code=-1` and flag incomplete chunks.
-- [ ] Scenario variant stressing multiple concurrent tools (multi-model agents) to ensure per-task isolation.
+- [ ] Scenario variant stressing multiple concurrent tools (multi-agent agents) to ensure per-task isolation.
 
 ### M4. Telemetry Contract & `.ahr` Schema Alignment
 
