--- a/specs/Public/R9.status.md
+++ b/specs/Public/R9.status.md
@@ -34,7 +34,7 @@ Core unit tests (`cargo test -p ah-command-trace-shim`) stay pure Rust without L
 
 ## Milestones
 
-### M0. Shim Bootstrap & Injection Smoke Tests
+### M0. Shim Bootstrap & Injection Smoke Tests - COMPLETED
 
 **Deliverables**
 
@@ -82,7 +82,7 @@ The M0-M1 implementation follows a layered architecture with platform-agnostic c
 - `crates/ah-command-trace-e2e-tests/src/bin/spawn_tree.rs` - Test helper binary for creating process trees
 - `crates/ah-command-trace-e2e-tests/tests/shim_injection_smoke.rs` - Integration test suite including spawn tree detection
 
-### M1. Sub-Process Detection Harness
+### M1. Sub-Process Detection Harness - COMPLETED
 
 **Deliverables**
 
