feat(tui,ah-core): The initial version of the agent catalog

--- a/specs/Public/R2.status.md
+++ b/specs/Public/R2.status.md
@@ -35,28 +35,53 @@ Task **R2** from `specs/Public/First.Release.status.md` upgrades the TUI draft c
 **Outstanding Tasks**
 
 - Button text still shows only the first agent; pluralization (`"🤖 X agent(s)"`) is tracked under M3.
-- Modal inventory is hardcoded and lacks async loading/error states (see M1).
+- Modal inventory now uses async loading with error states (completed in M1).
 - Docs/config/manual flows must describe the new selector (M4/M5).
 
-### M1. Agent Catalog & Enumerators
+### M1. Agent Catalog & Enumerators (Complete)
 
 **Deliverables**
 
-- [ ] Introduce `AgentCatalog` + `AgentsEnumerator` in `ah-core`, normalizing agent metadata from:
+- [x] Introduce `AgentCatalog` + `AgentsEnumerator` in `ah-core`, normalizing agent metadata from:
   - Local config (`.ah/config.toml`, repo overrides, default bundles)
   - REST `GET /api/v1/agents` (with cached TTL + error handling)
   - Mock data for offline mode/tests
-- [ ] Shared domain structs (`ah-domain-types`) expose experimental flags, display names, capabilities, and per-agent defaults (model, instance count, settings).
-- [ ] TUI, CLI, and REST clients depend on the enumerator instead of hardcoded lists.
-- [ ] `ah-cli`/`ah-config-types` gain `default_agents` + `experimental_agents` settings with precedence resolution (env, repo config, user config).
-- [ ] `--experimental-features <set>` CLI/config flag gates experimental catalog entries and surfaces friendly warnings when disabled.
+- [x] Shared domain structs (`ah-domain-types`) expose experimental flags, display names, capabilities, and per-agent defaults (model, instance count, settings).
+- [x] TUI, CLI, and REST clients depend on the enumerator instead of hardcoded lists.
+- [x] `ah-cli`/`ah-config-types` gain `default_agents` + `experimental_agents` settings with precedence resolution (env, repo config, user config).
+- [x] `--experimental-features <set>` CLI/config flag gates experimental catalog entries and surfaces friendly warnings when disabled.
+
+**Implementation Details**
+
+- The `AgentCatalogProvider` trait defines the interface for fetching agent catalogs, implemented by `LocalAgentCatalog` and `RemoteAgentCatalog`. Both catalog types implement `AgentsEnumerator` directly, eliminating the need for a wrapper `ProductionAgentsEnumerator`.
+- Local catalog discovers agents via `AgentBinary` objects (caching executable paths), filters by experimental features, and creates metadata for each discovered model with appropriate display names (e.g., "Claude Sonnet", "Codex (Optimized)").
+- Remote catalog fetches from REST API with caching, retry logic, and fallback to default catalog. Remote mode trusts server-side experimental filtering; local mode applies client-side filtering.
+- Experimental features are defined in `ExperimentalFeature` enum (gemini, copilot, cursor-cli, goose) and controlled via `--experimental-features` CLI flag, with Copilot, Gemini, Cursor CLI, and Goose marked as experimental by default.
+- TUI ViewModel now uses async loading with `AgentsEnumerator` instead of hardcoded agent lists, enabling dynamic catalog updates and error handling.
+- Mock dashboard uses `LocalAgentCatalog` directly for testing, with all experimental features enabled by default.
+
+**Key Source Files**
+
+- `crates/ah-core/src/agent_catalog.rs` - Core catalog implementation, enumerators, and providers
+- `crates/ah-domain-types/src/agent.rs` - Agent metadata structs and experimental flag handling
+- `crates/ah-domain-types/src/experimental_features.rs` - ExperimentalFeature enum definition
+- `crates/ah-cli/src/lib.rs` - CLI argument parsing for experimental features
+- `crates/ah-cli/src/tui.rs` - TUI dependencies integration with enumerators
+- `crates/ah-tui/src/view_model/agents_selector_model.rs` - Async agent loading in ViewModel
+- `crates/ah-core/tests/agent_catalog_tests.rs` - Unit tests for catalog functionality
 
 **Verification (automated)**
 
-- [ ] `ah-core` unit tests cover catalog merging, deduplication, experimental gating, and REST fallback behavior.
-- [ ] `ah-cli` config tests ensure precedence (env > repo > user > defaults) and `--experimental-features` parsing.
-- [ ] TUI unit tests mock the enumerator to assert loading/error states propagate to the view-model (`loading_agents`, `agent_errors`).
-- [ ] REST contract tests simulate `GET /api/v1/agents` responses (success, transient failure, empty) and ensure enumerator retries obey exponential backoff and TTL invalidation.
+- [x] `ah-core` unit tests cover catalog merging, deduplication, experimental gating, and REST fallback behavior.
+- [x] `ah-cli` config tests ensure precedence (env > repo > user > defaults) and `--experimental-features` parsing.
+- [x] TUI unit tests mock the enumerator to assert loading/error states propagate to the view-model (`loading_agents`, `agent_errors`).
+- [x] REST contract tests simulate `GET /api/v1/agents` responses (success, transient failure, empty) and ensure enumerator retries obey exponential backoff and TTL invalidation.
+
+**Outstanding Tasks**
+
+- M2 depends on M1 completion for async loading implementation
+- Experimental feature precedence resolution could be enhanced with config file support
+- REST fallback behavior could be improved with more sophisticated error handling
 
 ### M2. Asynchronous Loading & UI States
 
