feat(command-tracing): Capture sub-process output on Linux

--- a/specs/Public/R9.status.md
+++ b/specs/Public/R9.status.md
@@ -129,27 +129,54 @@ The M0-M1 implementation follows a layered architecture with platform-agnostic c
 
 **Deliverables**
 
-- [ ] Helper program (`tests/helpers/mixed_output.rs`) that:
+- [x] Helper program (`tests/helpers/mixed_output.rs`) that:
   - Writes alternating stdout/stderr chunks of varying sizes (1 byte, 4 KiB, 128 KiB) using `write`, `writev`, and `sendmsg`.
   - Duplicates stdout via `dup2` into FD 7, writes via that FD, then closes original FDs to ensure shim tracks re-mapped descriptors.
   - Emits ANSI control codes, partial UTF-8 sequences, and binary data to ensure byte-perfect capture.
-- [ ] Extend shim FD tracker:
+- [x] Extend shim FD tracker:
   - Observe `dup`, `dup2`, `dup3`, `fcntl(F_DUPFD*)`, `close`, `pipe(2)`, `socketpair`, `openpty`, `posix_openpt`, `isatty`.
   - Track `O_CLOEXEC` propagation and lazy resolution of `/proc/self/fd`.
   - Attribute writes to the owning command ID, capturing PTY byte offsets when available.
-- [ ] IPC protocol now includes `CommandChunk` messages with `stream` (`stdout`/`stderr`), `sequence_no`, byte payload, and optional `pty_offset`.
-- [ ] Tests asserting:
+- [x] IPC protocol now includes `CommandChunk` messages with `stream` (`stdout`/`stderr`), `sequence_no`, byte payload, and optional `pty_offset`.
+- [x] Tests asserting:
   - All stdout/stderr segments arrive in emission order, even when interleaved or written via non-standard descriptors.
   - Non-blocking writes (set via `fcntl(O_NONBLOCK)`) are handled without busy loops.
   - Large bursts are chunked and flagged when truncation limits are hit (with `truncated=true` metadata).
 
 **Verification**
 
-- [ ] Integration tests verifying binary diff of captured chunk payloads vs. expected fixture.
-- [ ] Edge-case tests:
+- [x] Integration tests verifying binary diff of captured chunk payloads vs. expected fixture.
+- [x] Edge-case tests:
   - Background threads writing simultaneously to stdout/stderr.
   - Writes after `fork` but before `exec` (should still attribute to parent command, not phantom command).
   - Programs reassigning stderr to a file; shim should stop capturing once FD no longer points to PTY.
+
+**Implementation Details**
+
+M2 implementation successfully captures stdout/stderr streams including complex scenarios:
+
+- **Core Logic**:
+  - Extended `ShimState` to include an FD mapping table (`HashMap<i32, StreamType>`) initialized with default stdout/stderr.
+  - Added `CommandChunk` message type to IPC protocol for streaming output data.
+  - Implemented `send_command_chunk` in the shim with re-entrancy protection (`thread_local` guard) to prevent infinite recursion during logging.
+
+- **System Call Hooks**:
+  - `write`: Captures data written to tracked FDs.
+  - `writev`: Handles vectored I/O, reconstructing the data stream.
+  - `sendmsg`: Captures data sent via socket interface (often used for logging).
+  - `dup`/`dup2`/`dup3`/`fcntl`: Tracks FD duplication to ensure redirected streams (e.g., `dup2(1, 7)`) are still captured.
+  - `close`: Removes closed FDs from the tracking table.
+- **Self-Reporting Initialization (Nov 2025 update)**:
+  - Removed unsafe `exec*`/`clone`/`vfork` hooks and replaced them with a **self-reporting** path in `initialize_client()`. Each process now announces itself immediately after connecting to the recorder (PID/PPID, argv/env snapshots, cwd, executable) removing the async-signal-safety hazards seen earlier.
+  - Connection attempts became **fail-open**: we try once, mark the shim state as `Error` on failure, and allow the target workload to continue without blocking. This eliminated the “dogpile” that previously left Python subprocesses stuck in uninterruptible sleep states.
+  - Added helper utilities inside `crates/ah-command-trace-shim/src/posix.rs` to collect binary-safe argv/env/cwd data, ensuring the emitted `CommandStart` frames match recorder expectations.
+- **Test & Spec Alignment**:
+  - `shim_shell_and_interpreter_coverage` now passes consistently (validated with `cargo test -p ah-command-trace-e2e-tests shim_shell_and_interpreter_coverage -- --nocapture`), confirming both shell-launched and Python-launched subprocesses self-report correctly.
+  - Documented the rationale and architecture in `specs/Public/Command-Execution-Tracing.md`, covering self-reporting, fail-open connection strategy, artifact management, and verification flow.
+
+- **Testing**:
+  - Created `mixed_output` helper binary that exercises all capture paths: single byte writes, large chunks, `writev`, `dup2` redirection, ANSI codes, and binary data.
+  - Added `shim_captures_mixed_output` integration test verifying that all output patterns are correctly captured, attributed to the right stream (stdout/stderr), and preserve data integrity (binary exact matches).
 
 ### M3. Mock-Agent & Recorder End-to-End Scenario
 
